# Buffout4

./: .gitignore  Buffout4.sln  Buffout4.toml  Buffout4.vcxproj  Buffout4.vcxproj.filters  CMakeLists.txt  LICENSE  MakeGen.py  PackageGen.py  README.md  vcpkg.json  version.rc
cmake/: headerlist.cmake  sourcelist.cmake
src/: CrashHandler.cpp  CrashHandler.h  PCH.cpp  PCH.h  Settings.h  main.cpp  version.h
src/Crash/: CrashHandler.cpp
src/Crash/Introspection/: Introspection.cpp  Introspection.h
src/Crash/Modules/: ModuleHandler.cpp  ModuleHandler.h
src/Crash/Stack/: StackHandler.cpp  StackHandler.h
src/Fixes/: ActorIsHostileToActorFix.h  CellInitFix.cpp  CellInitFix.h  EncounterZoneResetFix.h  FaderMenuFix.h  Fixes.cpp  Fixes.h  SafeExit.h  ScaleformAllocator.h  ScaleformAllocatorFix.h  SmallBlockAllocatorFix.cpp  SmallBlockAllocatorFix.h
src/Patches/: MemoryManagerPatch.h  Patches.cpp  Patches.h  ScaleformAllocatorPatch.h  SmallBlockAllocatorPatch.cpp  SmallBlockAllocatorPatch.h
